Fix overlapping layout and responsive issues

--- a/sec6.css
+++ b/sec6.css
@@ -5,8 +5,8 @@
     padding-top: 50px;
     gap: 80px;
     height:90vh;
-    margin-top:0px;
-    margin-bottom:0px;
+    margin-top:50px;
+    margin-bottom:50px;
 }
 .sec-7-1{
     display:flex;
@@ -14,20 +14,20 @@
     font-size:35px;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 0px;
-    margin-top:0px;
+    margin-bottom: 50px;
+    margin-top:50px;
 }
 .sec-7-1 h1{
     font-size: 150px;
     font-weight: 600;
-    margin-top:0px;
-    margin-bottom:0px;
+    margin-top:100px;
+    margin-bottom:100px;
    
 }
 .sec-7-1 > :nth-child(1){
     font-weight:600;
-    margin-top:0px;
-    margin-bottom:0px;
+    margin-top:50px;
+    margin-bottom:50px;
 }
 .a1,.a2{
     display:flex;
@@ -79,4 +79,13 @@
         font-weight: 600;
         top:30px;
     }
+    .sec-7-1{
+        margin-top: 100px;
+        margin-bottom: 100px;
+
+    }
+    .social-icons a {
+    top:60px;
+    margin-bottom: 50px;
+}
 }
